RESOLVED FIXED209980
REGRESSION (r8412): Use RetainPtr<> for NSMutableAttributedString in -[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:]
https://bugs.webkit.org/show_bug.cgi?id=209980
Summary REGRESSION (r8412): Use RetainPtr<> for NSMutableAttributedString in -[WebAcc...
David Kilzer (:ddkilzer)
Reported 2020-04-03 12:10:44 PDT
Way back in 2005 in commit r8412, David Harrison added this line of code to WebCore/kwq/KWQAccObject.mm that was never changed to use RetainPtr<>: NSMutableAttributedString *attrString = [[NSMutableAttributedString alloc] init]; This lack of RetainPtr<> caused a leak when Darin landed a fix for Bug 209129. I fixed the leak in Bug 209932 by moving an early return, but Darin was curious about why this variable had never been converted: <https://bugs.webkit.org/show_bug.cgi?id=209932#c3>
Attachments
Patch v1 (3.40 KB, patch)
2020-04-03 12:12 PDT, David Kilzer (:ddkilzer)
no flags
Patch for landing (3.36 KB, patch)
2020-04-03 12:24 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-03 12:11:05 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-04-03 12:12:30 PDT
Created attachment 395400 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 3 2020-04-03 12:13:18 PDT
LOL! Commit r8412 is so old that Bugzilla refuses to link it! <https://trac.webkit.org/r8412>
Darin Adler
Comment 4 2020-04-03 12:18:34 PDT
Comment on attachment 395400 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=395400&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1258 > + RetainPtr<NSMutableAttributedString> attrString = adoptNS([[NSMutableAttributedString alloc] init]); Could just write: auto attrString = ...
David Kilzer (:ddkilzer)
Comment 5 2020-04-03 12:24:05 PDT
Created attachment 395401 [details] Patch for landing
EWS
Comment 6 2020-04-03 12:50:48 PDT
Committed r259483: <https://trac.webkit.org/changeset/259483> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395401 [details].
Note You need to log in before you can comment on or make changes to this bug.