REGRESSION (r8412): Use RetainPtr<> for NSMutableAttributedString in -[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:] <https://webkit.org/b/209980>

Reviewed by Darin Adler.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:]):
Make use of RetainPtr<>.


Canonical link: https://commits.webkit.org/222901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259483 268f45cc-cd09-0410-ab3c-d52691b4dbfc